// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroupInput should render with grouped options correctly 1`] = `
<div
  className="Input CheckboxGroupInput per-row-1"
  id={null}
>
  
  <header
    className="SectionHeader size-xs"
  >
    <span>
      <h6
        className="SectionHeader__title"
      >
        Category A
      </h6>
    </span>
    <div
      className="SectionHeader__controls"
    />
  </header>
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="notRelevant"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Not relevant
      </span>
    </label>
    
  </div>
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="agriculture"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Agriculture
      </span>
    </label>
    
  </div>
  <header
    className="SectionHeader size-xs"
  >
    <span>
      <h6
        className="SectionHeader__title"
      >
        Category B
      </h6>
    </span>
    <div
      className="SectionHeader__controls"
    />
  </header>
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="cars"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Cars
      </span>
    </label>
    
  </div>
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="banking"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Banking
      </span>
    </label>
    
  </div>
  
</div>
`;

exports[`CheckboxGroupInput should render with grouped options correctly 2`] = `
<div
  className="Input CheckboxGroupInput per-row-1"
  id={null}
>
  
  <header
    className="SectionHeader size-xs"
  >
    <span>
      <h6
        className="SectionHeader__title"
      >
        Category A
      </h6>
    </span>
    <div
      className="SectionHeader__controls"
    />
  </header>
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="notRelevant"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Not relevant
      </span>
    </label>
    
  </div>
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="agriculture"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Agriculture
      </span>
    </label>
    
  </div>
  <header
    className="SectionHeader size-xs"
  >
    <span>
      <h6
        className="SectionHeader__title"
      >
        Category B
      </h6>
    </span>
    <div
      className="SectionHeader__controls"
    />
  </header>
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="cars"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Cars
      </span>
    </label>
    
  </div>
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="banking"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Banking
      </span>
    </label>
    
  </div>
  
</div>
`;

exports[`CheckboxGroupInput should render with options correctly 1`] = `
<div
  className="Input CheckboxGroupInput per-row-1"
  id={null}
>
  
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="notRelevant"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Not relevant
      </span>
    </label>
    
  </div>
  <div
    className="Input CheckboxInput block"
    id={null}
  >
    <label>
      <input
        checked={false}
        name="industries"
        onChange={[Function]}
        type="checkbox"
        value="agriculture"
      />
      <div
        className="CheckboxInput__input"
        role="checkbox"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 CheckboxInput__tick"
          data-icon="check"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="InputLabel CheckboxInput__label"
        id={null}
      >
        Agriculture
      </span>
    </label>
    
  </div>
  
</div>
`;
